# promox-configuration

./: .env.example  .gitignore  Dockerfile  README.md  debug_templates.py  deploy-output.txt  docker-compose.test.yaml  docker-compose.yaml  proxmox-config.ps1  proxmox-test.ps1  pyproject.toml
.github/agents/: documentation-guardian.md
.ideas/: todo.md
config/: cert-targets.yaml  hosts.yaml  network.yaml  proxmox.yaml
config/vms/: cert-manager.yaml  grafana.yaml  pfsense-test.yaml  pfsense.yaml  prometheus.yaml  test-client.yaml
scripts/: push_certs.py  verify_cert.py
src/: __init__.py  cert_key_deploy.py  cert_manager_deploy.py  config.py  config_disk.py  deploy.py  grafana_deploy.py  hosts_config.py  iso_manager.py  lxc_creator.py  main.py  network.py  pfsense_config.py  prometheus_deploy.py  proxmox_client.py  ssh_executor.py  test_env.py  vm_creator.py  wizard.py
templates/: pfsense_config.xml
templates/cert-manager/: cert-receive.sh  cloudflare.ini.template  deploy-hook.sh  setup.sh
templates/grafana/: dashboards.yaml  datasources.yaml  proxmox-dashboard.json
templates/prometheus/: prometheus.yml  pve-exporter.service  pve.yml
test/: .env.example  README.md  ports.yaml
test/config/: proxmox.yaml
